Make URL creation more robust