@@ -211,12 +211,9 @@ class ClasspathElementZip extends ClasspathElement {
             @Override
             public URL getClasspathElementURL() {
                 try {
-                    if (!packageRootPrefix.isEmpty()) {
-                        return new URL("jar:file:" + classpathEltZipFile + "!"
-                                + URLPathEncoder.encodePath(packageRootPrefix));
-                    } else {
-                        return getClasspathElementFile().toURI().toURL();
-                    }
+                    return new URL(
+                            "jar:" + getClasspathElementFile().toURI().toURL() + (packageRootPrefix.isEmpty() ? ""
+                                    : "!" + URLPathEncoder.encodePath(packageRootPrefix)));
                 } catch (final MalformedURLException e) {
                     // Shouldn't happen
                     throw new IllegalArgumentException(e);
